--- a/package.json
+++ b/package.json
@@ -1,29 +1,43 @@
 {
   "name": "asanjs-registry",
-  "version": "1.0.13",
+  "version": "2.0.3",
   "jspm": {
-    "directories": {},
     "main": "dist/system/asanjs-registry.js",
+    "dependencies": {
+      "x-tag": "npm:x-tag@^1.5.6"
+    },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.1.13",
-      "babel-runtime": "npm:babel-runtime@^5.1.13",
-      "core-js": "npm:core-js@^0.9.4"
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
     }
   },
   "devDependencies": {
+    "aurelia-bundler": "^0.3.2",
     "aurelia-tools": "^0.1.11",
     "babel-dts-generator": "^0.2.5",
+    "babel-plugin-syntax-flow": "^6.5.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.7.4",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.6.5",
+    "babel-plugin-transform-flow-strip-types": "^6.7.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-es2016": "^6.0.11",
+    "babel-preset-stage-1": "^6.5.0",
     "browser-sync": "^2.7.13",
     "conventional-changelog": "0.0.11",
     "del": "^1.1.0",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-bump": "^0.1.11",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-insert": "^0.5.0",
     "gulp-jshint": "^1.9.0",
     "gulp-less": "^3.0.3",
+    "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-protractor": "^0.0.12",
     "gulp-rename": "^1.2.2",
@@ -45,5 +59,8 @@
     "vinyl-paths": "^1.0.0",
     "yargs": "^2.1.1",
     "zeparser": "0.0.7"
+  },
+  "dependencies": {
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.6.5"
   }
 }
